<resources>
    <string name="app_name">GroceryApp</string>
    <string name="login">Login</string>
    <string name="email">enter email</string>
    <string name="password">enter password</string>
    <string name="reg">Dont have an account? Signup</string>
    <string name="log">Already have account? Login</string>
    <string name="signup">Signup</string>
    <string name="cpassword">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>