<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignupActivity"
    android:layout_height="wrap_content"
    android:background="#F9FBF9"
    android:layout_width="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/signup" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/etEmailAddresssu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPasswordsu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/etconfirmPasswordsu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:textColor="@color/black"
                android:hint="@string/cpassword"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:layout_marginTop="24dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textColorHint="@color/black" />

            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/btnLogin"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log"
                android:textColor="@color/black" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>


